@@ -7,7 +7,7 @@ const expressions = require('./test-cases');
 const winston = j79.winston;
 
 // nexl source file
-var nexlSource = {asFile: {fileName: 'nexl-sources/nexl-source1.js'}};
+var nexlSourceDefault = {asFile: {fileName: 'nexl-sources/nexl-source1.js'}};
 
 // comparing two javascript variables
 function compare(result, expectedResult) {
@@ -41,6 +41,8 @@ function failureMessage(exprDef, err) {
 
 // tests the expression
 function testExpression(exprDef) {
+	var nexlSource = exprDef.nexlSource ? exprDef.nexlSource : nexlSourceDefault;
+
 	try {
 		var result = nexlEngine.nexlize(nexlSource, exprDef.expression, exprDef.args);
 	} catch (e) {
