@@ -1,0 +1,6 @@
+x = 10;
+
+'@ src2.js';
+'@ src3.js';
+
+nexl.defaultExpression = '${y}';
