@@ -1,0 +1,2 @@
+'@ src1.js';
+'@ ../nexl-sources/src1.js';
